# feature-selection-python

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: feature_selection.rst  modules.rst
feature-selection/: ForwardSelect.py  RecursiveFeatureElimination.py  forward_select.py  simulated_annealing.py  variance-threshold-select.py
feature_selection/: ForwardSelect.py  RecursiveFeatureElimination.py  SimulatedAnnealing.py  __init__.py  forward_selection.py  recursive_feature_elimination.py  simulated_annealing.py  variance_threshold_select.py  variance_thresholding.py
tests/: test_RecursiveFetaureElimination.py  test_feature-selection.py  test_forward_selection.py  test_recursive_fetaure_elimination.py  test_simulated_annealing.py  test_variance_threshold_select.py  test_variance_thresholding.py
