[tool.poetry]
name = "feature-selection"
version = "0.1.0"
description = "Feature selection for scikit-learn estimators"
authors = [
  "Ryan Homer <ryan.homer@alumni.ubc.ca>",
  "Jacky Ho <jackyho112dev@gmail.com>",
  "Derek Kruszewski <derek.j.kruszewski@gmail.com>",
  "Victor Cuspinera <vcuspinera@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/feature-selection-python"
repository = "https://github.com/UBC-MDS/feature-selection-python"
documentation = 'https://feature-selection.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
sphinx = "^2.4.4"
pytest = "^5.3.5"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
