[tool.poetry]
name = "feature-selection"
version = "1.0.1"
description = "Feature selection for scikit-learn estimators"
authors = [
  "Ryan Homer <ryan.homer@alumni.ubc.ca>",
  "Jacky Ho <jackyho112dev@gmail.com>",
  "Derek Kruszewski <derek.j.kruszewski@gmail.com>",
  "Victor Cuspinera <vcuspinera@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/feature-selection-python"
repository = "https://github.com/UBC-MDS/feature-selection-python"
documentation = 'https://feature-selection.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
flake8 = "^3.7.9"
python-semantic-release = "^4.10.0"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "feature_selection/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

